--- a/vignettes/1_Interest_Rates.Rmd
+++ b/vignettes/1_Interest_Rates.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "FED Yield Curve"
+title: "FED Rate Expectations Over Time"
 author: "Christian Kruse"
 date: "`r Sys.Date()`"
 output: html_document
@@ -14,438 +14,6 @@ output: html_document
 
 ```{r  chunka1, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE,message = FALSE,warning = FALSE)
-```
-
-# FED
-
-```{r chunka2}
-
-if (!require(pacman)) { install.packages("pacman") }
-pacman::p_load(fredr,
-               dplyr,
-               tidyr,
-               lubridate,
-               caret,
-               partykit,
-               pROC,
-               gganimate,
-               devtools,
-               rvest,
-               zoo,
-               ggplot2,
-               forcats,
-               boot,
-               broom,
-               glue,
-               openxlsx,
-               purrr,
-               dkstat,
-               ecb,
-               httr,
-               PlayerRatings,
-               data.table,
-               gridExtra,
-               nlme,
-               directlabels,
-               drc,
-               ggrepel)
-source(file = "money_theme.R")
-
-```
-
-
-```{r chunka3}
-readRenviron(path = "Renviron.site")
-fredr::fredr_set_key(key = Sys.getenv("FRED_API"))
-
-```
-
-```{r chunka4}
-df_yieldcurve = 
-  fredr(series_id = "DGS1") %>% 
-  bind_rows(fredr(series_id = "DGS2")) %>% 
-  bind_rows(fredr(series_id = "DGS3")) %>% 
-  bind_rows(fredr(series_id = "DGS5")) %>% 
-  bind_rows(fredr(series_id = "DGS7")) %>% 
-  bind_rows(fredr(series_id = "DGS10")) %>% 
-  bind_rows(fredr(series_id = "DGS20")) %>% 
-  bind_rows(fredr(series_id = "DGS30")) %>% 
-  bind_rows(fredr(series_id = "DGS1MO")) %>% 
-  bind_rows(fredr(series_id = "DGS3MO")) %>% 
-  bind_rows(fredr(series_id = "DGS6MO")) %>% 
-  bind_rows(fredr(series_id = "DFF")) %>% 
-  bind_rows(fredr(series_id = "MORTGAGE30US"))
-
-order_ = c("DFF",
-           "DGS1MO",
-           "DGS3MO",
-           "DGS6MO",
-           "DGS1",
-           "DGS2",
-           "DGS3",
-           "DGS5",
-           "DGS7",
-           "DGS10",
-           "DGS20",
-           "DGS30",
-           "MORTGAGE30US")
-
-df_yieldcurve = 
-  df_yieldcurve %>% 
-  dplyr::select(date,series_id,value) %>% 
-  dplyr::mutate(series_id=factor(series_id,levels=order_)) %>% 
-  spread(series_id,value) %>% 
-  arrange(desc(date)) %>% 
-  tidyr::fill(c(2:ncol(.)),.direction="up") %>% 
-  # na.omit() %>% 
-  # top_n(n=1,wt=date) %>% 
-  gather(series_id,value,c(2:ncol(.))) %>% 
-  ungroup() %>% 
-  dplyr::mutate(series_id=factor(series_id,levels=order_)) %>% 
-  dplyr::mutate(time=ifelse(series_id=="DFF",0,
-                            ifelse(substr(series_id,1,8)=="MORTGAGE",
-                                   365*30,
-                                   ifelse(substr(series_id,5,6)=="MO",
-                                          30*as.integer(substr(series_id,4,4)),
-                                          365*as.integer(substr(series_id,4,5)))))) 
-```
-
-## Treasury Bonds
-
-```{r chunka5}
-df_yieldcurve %>% 
-  dplyr::mutate(value=value/100) %>% 
-  ggplot(.,aes(x=date,y=value)) +
-  geom_line(aes(group=series_id,color=series_id)) +
-  scale_x_date(date_breaks = "5 year",date_labels = "%Y") +
-  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.025)) + 
-  theme_money_printer_go_brrr(base_size=12) +
-  labs(title="All Yields",
-       x="Date",
-       y="Spread (%)",
-       caption = timestamp_caption())
-```
-
-
-## Since 2001
-
-```{r chunka6}
-
-df_yieldcurve %>% 
-  filter(date>ymd("2001-01-01")) %>% 
-  dplyr::mutate(value=value/100) %>% 
-  ggplot(.,aes(x=date,y=value)) +
-  geom_line(aes(group=series_id,color=series_id)) +
-  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
-  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.005)) + 
-  theme_money_printer_go_brrr(base_size=12) +
-  labs(title="All Yields",
-       x="Date",
-       y="Spread (%)",
-       caption = timestamp_caption())
-```
-
-### Previous 12 Months
-
-```{r chunka7}
-
-df_yieldcurve %>% 
-  filter(date>=Sys.Date()-years(1)) %>% 
-  dplyr::mutate(value=value/100) %>% 
-  ggplot(.,aes(x=date,y=value)) +
-  geom_line(aes(group=series_id,color=series_id)) +
-  theme(legend.position="bottom") +
-  scale_x_date(date_breaks = "1 months",date_labels = "%Y %b") +
-  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.005)) + 
-  theme_money_printer_go_brrr(base_size=12) +
-  labs(title="All Yields (Last Year)",
-       x="Date",
-       y="Spread (%)",
-       caption = timestamp_caption())
-
-```
-
-
-## Yield Curve
-
-```{r chunka8}
-
-df_yieldcurve %>% 
-  dplyr::mutate(series_id=as.integer(paste0(recode(series_id,
-                               'FEDFUNDS'='0',
-                               'DGS1MO'='1',
-                               'DGS3MO'='3',
-                               'DGS6MO'='6',
-                               'DGS1'='12',
-                               'DGS2'='24',
-                               'DGS3'='36',
-                               'DGS5'='60',
-                               'DGS7'='84',
-                               'DGS10'='120',
-                               'DGS20'='240',
-                               'DGS30'='360')))) %>% 
-  filter(date == max(date)) %>% 
-  ggplot(.,aes(x=series_id,y=value)) +
-  geom_point() +
-  geom_line() +
-  scale_x_continuous(labels = c('FEDFUNDS','DGS1MO','DGS3MO','DGS6MO','DGS1','DGS2','DGS3','DGS5','DGS7','DGS10','DGS20','DGS30'),breaks = c(0,1,3,6,12,24,36,60,84,120,240,360)) +
-  scale_y_continuous(limits=c(0,NA),expand=c(0,0),breaks = seq(0,10,by=0.25))  + 
-  # geom_text(aes(label=paste0(value,"%")),vjust=-1,size=3) +
-  geom_text_repel(aes(label=paste0(value,"%")),size=3) +
-  theme_money_printer_go_brrr(base_size=12) +
-  labs(title="US Treasury Yield Curve",
-       x="Bond",
-       y="Yield (%)",
-       caption = timestamp_caption())
-
-```
-
-## Treasury Bonds Spreads
-
-### DFF to All
-
-```{r chunka9}
-
-df_yieldcurve %>% 
-  filter(date>ymd("1975-01-01")) %>% 
-  dplyr::select(-time) %>% 
-  # filter(series_id %in% c("DGS10","DGS2")) %>% 
-  spread(series_id,value) %>% 
-  gather(series_id,value,DGS1MO:MORTGAGE30US) %>% 
-  dplyr::mutate(spread=(value-DFF)/100) %>% 
-  ggplot(.,aes(x=date,y=spread,color=series_id)) +
-  geom_line() +
-  geom_hline(yintercept = 0) + 
-  scale_x_date(date_breaks = "2 year",date_labels = "%Y") +
-  scale_y_continuous(labels = scales::percent) + 
-  theme_money_printer_go_brrr(base_size=12) +
-  geom_hline(yintercept = c(-0.0025,-0.005,-0.0075,-0.01),linetype=2,color="gray60") +
-  labs(title="Spread: DFF to ALL",
-       x="Date",
-       y="Spread (%)",
-       caption = timestamp_caption())
-
-```
-
-```{r chunka10}
-
-df_yieldcurve %>% 
-  filter(date>Sys.Date()-years(1)) %>% 
-  dplyr::select(-time) %>% 
-  # filter(series_id %in% c("DGS10","DGS2")) %>% 
-  spread(series_id,value) %>% 
-  gather(series_id,value,DGS1MO:MORTGAGE30US) %>% 
-  dplyr::mutate(spread=(value-DFF)/100) %>% 
-  ggplot(.,aes(x=date,y=spread,color=series_id)) +
-  geom_line() +
-  geom_hline(yintercept = 0) + 
-  scale_x_date(date_breaks = "2 months",date_labels = "%Y-%b") +
-  scale_y_continuous(labels = scales::percent) + 
-  theme_money_printer_go_brrr(base_size=12) +
-  geom_hline(yintercept = c(-0.0025,-0.005,-0.0075,-0.01),linetype=2,color="gray60") +
-  labs(title="Spread: DFF to ALL",
-       x="Date",
-       y="Spread (%)",
-       caption = timestamp_caption())
-
-```
-
-### 2-Year to 10-Year T-Bond
-
-```{r chunka11,fig.width = 1024/72, fig.width = 1024/72, dpi=72, fig.retina=1, dev.args = list(type = 'cairo-png') }
-
-df_yieldcurve %>% 
-  filter(date>ymd("1975-01-01")) %>% 
-  dplyr::select(-time) %>% 
-  filter(series_id %in% c("DGS10","DGS2")) %>% 
-  spread(series_id,value) %>% 
-  dplyr::mutate(spread=(DGS10-DGS2)/100) %>% 
-  ggplot(.,aes(x=date,y=spread)) +
-  geom_line() +
-  geom_hline(yintercept = 0) + 
-  scale_x_date(date_breaks = "2 year",date_labels = "%Y") +
-  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.0025)) + 
-  theme_money_printer_go_brrr(base_size=12) +
-  geom_hline(yintercept = c(-0.0025,-0.005,-0.0075,-0.01),linetype=2,color="gray60") +
-  labs(title="Spread: DGS2 - DGS10",
-       x="Date",
-       y="Spread (%)",
-       caption = timestamp_caption())
-```
-
-
-```{r chunka12,fig.width = 1024/72, fig.width = 1024/72, dpi=72, fig.retina=1, dev.args = list(type = 'cairo-png') }
-
-df_yieldcurve %>% 
-  filter(date>Sys.Date()-years(1)) %>% 
-  dplyr::select(-time) %>% 
-  filter(series_id %in% c("DGS10","DGS2")) %>% 
-  spread(series_id,value) %>% 
-  dplyr::mutate(spread=(DGS10-DGS2)/100) %>% 
-  ggplot(.,aes(x=date,y=spread)) +
-  geom_line() +
-  geom_hline(yintercept = 0,linetype=2) + 
-  scale_x_date(date_breaks = "1 month",date_labels = "%b") +
-  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.0025)) + 
-  theme_money_printer_go_brrr(base_size=12) +
-  labs(title="Spread: DGS2 - DGS10",
-       x="Date",
-       y="Spread (%)",
-       caption = timestamp_caption())
-```
-
-### 30-Year Mortgage to 30-Year T-Bond
-
-```{r chunka13,fig.width = 1024/72, fig.width = 1024/72, dpi=72, fig.retina=1, dev.args = list(type = 'cairo-png') }
-
-df_yieldcurve %>% 
-  filter(date>ymd("1975-01-01")) %>% 
-  filter(series_id %in% c("MORTGAGE30US","DGS30")) %>% 
-  spread(series_id,value) %>% 
-  dplyr::mutate(spread=(MORTGAGE30US-DGS30)/100) %>% 
-  ggplot(.,aes(x=date,y=spread)) +
-  geom_line() +
-  scale_x_date(date_breaks = "1 year",date_labels = "%Y") +
-  scale_y_continuous(labels = scales::percent,breaks = seq(-0.1,1,by=0.005)) +
-  geom_hline(yintercept = 0,linetype=2) +
-  geom_hline(yintercept = 0.025,color="red") +
-  theme_money_printer_go_brrr(base_size=12) +
-  theme(legend.position="bottom") +
-  labs(title="Spread: Mortgage30US - DGS30",
-       x="Date",
-       y="Spread (%)",
-       caption = timestamp_caption())
-```
-
-## Yield Checkboard
-
-```{r chunka14}
-df_checkboard = expand.grid(series_id=unique(df_yieldcurve$series_id),
-                            joined_series=unique(df_yieldcurve$series_id))
-
-df_yield_checkboard = 
-  df_checkboard %>% 
-  inner_join(df_yieldcurve) %>% 
-  inner_join(df_yieldcurve,by=c("joined_series"="series_id","date"="date")) %>% 
-  dplyr::mutate(spread=value.x-value.y) %>% 
-  dplyr::mutate(label=ifelse(spread<0,spread,NA)) %>% 
-  dplyr::select(series_id,joined_series,date,spread,label) %>% 
-  dplyr::mutate(series_id=factor(series_id,levels=order_),
-                joined_series=factor(joined_series,levels=order_))
-```
-
-
-```{r chunka15}
-df_yield_checkboard %>% 
-  group_by(series_id,joined_series) %>% 
-  filter(date==max(date)) %>% 
-  ungroup() %>% 
-  dplyr::mutate(spread=ifelse(series_id==joined_series,NA,spread)) %>% 
-  ggplot(.,aes(x=series_id,y=joined_series)) +
-  geom_tile(aes(fill=spread)) +
-  scale_fill_gradient2(low="green",high="red",midpoint=0,na.value = "gray70") +
-  geom_text(aes(label=scales::number(label,accuracy = 0.01,prefix = NULL)),size=3.5)+ 
-  theme_money_printer_go_brrr(base_size=12) +
-  labs(title="US T-Bond Spreads Checkboard",
-       x=NULL,
-       y="NULL",
-       caption = timestamp_caption())
-```
-
-
-```{r chunka16,eval=F }
-df_yield_checkboard %>% 
-  filter(date>ymd("20-01-01")) %>% 
-  ggplot(.,aes(x=series_id,y=joined_series)) +
-  geom_tile(aes(fill=spread)) +
-  scale_fill_gradient2(low="green",high="red",midpoint=0) +
-  theme(axis.text.x=element_text(angle=45,hjust=1),
-        legend.position="bottom")+
-  geom_text(aes(label=scales::number(label,accuracy = 0.01,prefix = NULL)),size=3.5)  + 
-  transition_time(date) +
-  labs(title = "Date: {frame_time}")
-
-```
-
-
-```{r chunka17}
-
-df_yield_checkboard %>% 
-  dplyr::mutate(series_id=as.integer(paste0(recode(series_id,
-                                 'DFF'='0',
-                                 'DGS1MO'='1',
-                                 'DGS3MO'='3',
-                                 'DGS6MO'='6',
-                                 'DGS1'='12',
-                                 'DGS2'='24',
-                                 'DGS3'='36',
-                                 'DGS5'='60',
-                                 'DGS7'='84',
-                                 'DGS10'='120',
-                                 'DGS20'='240',
-                                 'DGS30'='360')))) %>% 
-  dplyr::mutate(joined_series=as.integer(paste0(recode(joined_series,
-                                 'DFF'='0',
-                                 'DGS1MO'='1',
-                                 'DGS3MO'='3',
-                                 'DGS6MO'='6',
-                                 'DGS1'='12',
-                                 'DGS2'='24',
-                                 'DGS3'='36',
-                                 'DGS5'='60',
-                                 'DGS7'='84',
-                                 'DGS10'='120',
-                                 'DGS20'='240',
-                                 'DGS30'='360')))) %>% 
-  dplyr::mutate(diff=series_id-joined_series) %>% 
-  filter(series_id!=joined_series) %>% 
-  filter(series_id > joined_series) %>% 
-  filter(date>ymd("2022-01-01")) %>% 
-  dplyr::mutate(series_id=recode(series_id,
-                                 '0'='DFF',
-                                 '1'='DGS1MO',
-                                 '3'='DGS3MO',
-                                 '6'='DGS6MO',
-                                 '12'='DGS1',
-                                 '24'='DGS2',
-                                 '36'='DGS3',
-                                 '60'='DGS5',
-                                 '84'='DGS7',
-                                 '120'='DGS10',
-                                 '240'='DGS20',
-                                 '360'='DGS30')) %>% 
-  dplyr::mutate(joined_series=recode(joined_series,
-                                 '0'='DFF',
-                                 '1'='DGS1MO',
-                                 '3'='DGS3MO',
-                                 '6'='DGS6MO',
-                                 '12'='DGS1',
-                                 '24'='DGS2',
-                                 '36'='DGS3',
-                                 '60'='DGS5',
-                                 '84'='DGS7',
-                                 '120'='DGS10',
-                                 '240'='DGS20',
-                                 '360'='DGS30')) %>% 
-  unite(series_id,series_id,joined_series) %>% 
-  group_by(series_id) %>% 
-  dplyr::mutate(label=ifelse(date==max(date),paste0(series_id),"")) %>% 
-  ggplot(.,aes(x=date,y=spread,color=series_id)) +
-  geom_line()+
-  theme_bw() +
-  theme(legend.position="null") +
-  scale_y_continuous(limits=c(NA,0.25)) +
-  scale_x_date(expand=c(0.4,0)) +
-  geom_text(aes(label=label),hjust=-0.1,size=3) +
-  geom_hline(yintercept = 0,linetype=2) +
-  geom_vline(xintercept = Sys.Date())+ 
-  theme_money_printer_go_brrr(base_size=12) +
-  theme(legend.position="null") +
-  labs(title="US T-Bond Spread Over Time",
-       x="Date",
-       y="Spread (%)",
-       caption = timestamp_caption())
-  
 ```
 
 ## FED Rate Expectations Over Time
